--- a/index.html
+++ b/index.html
@@ -19,10 +19,91 @@
 
 <body>
     <div class="hero bg-dark text-center py-5">
-        <h1 class="text-white">나만의 르탄마켓</h1>
+        <h1 class="text-white">나만의 중고마켓</h1>
         <h2 class="text-white">집에 있는 물건을 팝니다!</h2>
     </div>
-    <!-- 여기 -->
+    <div class="container">
+        <div class="row">
+            <!-- 카드 1 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://source.unsplash.com/1600x900/?rice-cooker" class="card-img-top" alt="전기밥솥">
+                    <div class="card-body">
+                        <h5 class="card-title">전기밥솥</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">5만원</h6>
+                        <p class="card-text">한 번 밖에 안쓴 전기밥솥 팝니다. 부모님이 독립 할 때 주신 거에요!</p>
+                        <a href="https://www.spartacodingclub.kr/" class="btn btn-primary" target="_blank">스파르타코딩클럽 홈페이지로
+                            이동</a>
+                    </div>
+                </div>
+            </div>
+            <!-- 카드 2 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://source.unsplash.com/1600x900/?electric-fan" class="card-img-top" alt="전기선풍기">
+                    <div class="card-body">
+                        <h5 class="card-title">전기선풍기</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">3만원</h6>
+                        <p class="card-text">여름에 시원하게 사용할 수 있는 전기선풍기 팝니다.</p>
+                        <a href="https://www.spartacodingclub.kr/" class="btn btn-primary" target="_blank">스파르타코딩클럽 홈페이지로
+                            이동</a>
+                    </div>
+                </div>
+            </div>
+            <!-- 카드 3 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://source.unsplash.com/1600x900/?laptop" class="card-img-top" alt="노트북">
+                    <div class="card-body">
+                        <h5 class="card-title">노트북</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">10만원</h6>
+                        <p class="card-text">사용한 기간이 짧은 노트북 팝니다. 성능 좋아요!</p>
+                        <a href="https://www.spartacodingclub.kr/" class="btn btn-primary" target="_blank">스파르타코딩클럽 홈페이지로
+                            이동</a>
+                    </div>
+                </div>
+            </div>
+            <!-- 카드 4 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://source.unsplash.com/1600x900/?camera" class="card-img-top" alt="카메라">
+                    <div class="card-body">
+                        <h5 class="card-title">카메라</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">8만원</h6>
+                        <p class="card-text">고화질 사진을 찍을 수 있는 카메라 팝니다. 거의 새 것과 같아요!</p>
+                        <a href="https://www.spartacodingclub.kr/" class="btn btn-primary" target="_blank">스파르타코딩클럽 홈페이지로
+                            이동</a>
+                    </div>
+                </div>
+            </div>
+            <!-- 카드 5 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://source.unsplash.com/1600x900/?guitar" class="card-img-top" alt="기타">
+                    <div class="card-body">
+                        <h5 class="card-title">기타</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">7만원</h6>
+                        <p class="card-text">악기를 배워볼 생각이 있으신가요? 저렴한 가격에 기타를 팝니다.</p>
+                        <a href="https://www.spartacodingclub.kr/" class="btn btn-primary" target="_blank">스파르타코딩클럽 홈페이지로
+                            이동</a>
+                    </div>
+                </div>
+            </div>
+            <!-- 카드 6 -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://source.unsplash.com/1600x900/?bicycle" class="card-img-top" alt="자전거">
+                    <div class="card-body">
+                        <h5 class="card-title">자전거</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">15만원</h6>
+                        <p class="card-text">사용하지 않는 자전거 판매합니다. 건강을 위해 타보세요!</p>
+                        <a href="https://www.spartacodingclub.kr/" class="btn btn-primary" target="_blank">스파르타코딩클럽 홈페이지로
+                            이동</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
