--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
         crossorigin="anonymous"></script>
     <style>
         /* 꾸미기 */
+        .hero {
+            margin-bottom: 20px;
+        }
+        .card {
+            transition: transform 0.3s ease;
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+        }
     </style>
 </head>
 
